# inv-gate

./: .docs-gate.toml  .gitignore  .mcp.json  .sos-stack.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/agents/: advisory-watch.md  architect.md  boundary-check.md  orchestrator.md  worker.md
.claude/commands/: advisory-scan.md  security-review.md
.claude/skills/apply/: SKILL.md
.claude/skills/forge/: SKILL.md
.claude/skills/idea/: SKILL.md
.claude/skills/init/: SKILL.md
.claude/skills/retro/: SKILL.md
.github/workflows/: release.yml
docs/: AGENT_MAP.yaml  ARCHITECTURE.md  BACKLOG.md  DISCOVERIES.md  ORCHESTRATION.md  PROJECT.md  SOS_KIT_FEEDBACK.md
docs/discoveries/: P001.md  P002.md  P003.md  P004.md  P005.md  P006.md  P007.md  P008.md  P009.md  P010.md
docs/security/: INVARIANTS.md
docs/ticket/: P001-pin-golden-oracle.md  P002-check-secrets.md  P003-check-runtime.md  P004-check-port-schema.md  P005-gate-all.md  P006-serve-mcp.md  P007-gate-skip-absent.md  P008-release-v0.1.0.md  P009-ci-actions-bump.md  P010-empty-tree-sha.md
golden/: README.md  check-hardcoded-secrets.py  check-port-bind.py  check-runtime-secrets.py  check-schema-safety.sh  security-gate.sh
hooks/: pre-commit  pre-push
phieu/: DISCOVERY_PROTOCOL.md  TICKET_TEMPLATE.md  phieu.sh
scripts/: architect-guard.sh  block-env-commit.sh  block-env-edit.sh  block-unsafe-merge.sh  check-case-collision.sh  check-hardcoded-secrets.py  check-runtime-secrets.py  idea-smell.sh  install-hooks.sh  no-code-on-default.sh  orchestrator-guard.sh  security-gate.sh  session-start-banner.sh
scripts/parsers/: cargo_lock.py  go_sum.py  package_lock_v3.py  pnpm_lock_v9.py  pyproject_toml.py  requirements_txt.py
src/: gate.rs  main.rs  serve.rs
src/checks/: mod.rs  port.rs  runtime.rs  schema.rs  secrets.rs
templates/: .docs-gate.toml  .sos-stack.toml.example  INVARIANTS-template.md  advisory-inbox.md  claude-settings.local.json  setup-dev.sh
tests/: gate_skip.rs  mcp_serve.rs  parity_gate.rs  parity_port.rs  parity_runtime.rs  parity_schema.rs  parity_secrets.rs
tests/golden/: MANIFEST.md  repin.sh
tests/golden/pins/: exit_codes.json  gate--clean.stderr.txt  gate--clean.stdout.txt  gate--dirty.stdout.txt  (+9 more)
(+9 files in other folders)
