[package]
name = "inv-gate"
version = "0.1.0"
edition = "2024"
description = "Mechanical security invariant checks (INV-001..010) — secrets, port bind, runtime state, schema safety. Replaces ~794 lines of Python+Bash. CLI + MCP dual mode."
license = "MIT"
repository = "https://github.com/aspelldenny/inv-gate"
homepage = "https://github.com/aspelldenny/inv-gate"
keywords = ["security", "invariants", "linter", "secrets", "mcp"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "io-std"] }
anyhow = "1"
thiserror = "2"
regex = "1"
walkdir = "2"
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
